# adventofcode-2024

./: aoc2024.opam  dune-project
lib/aoc_common/: aoc_common.ml  dune
lib/day_1/: day_1.ml  dune
lib/day_2/: day_2.ml  dune
lib/day_3/: day_3.ml  dune
lib/day_4/: day_4.ml  dune
lib/day_5/: day_5.ml  dune
lib/day_x/: day_x.ml  dune
resources/aoc_common/: letter_lines.txt  ws_delimited.txt
